# game_microservice

./: .gitignore  README.md  main.py  pyproject.toml  sonar-project.properties  test.compose.yml  test.dockerfile  tox.ini
.github/workflows/: ci.yml  sonar.yml  test.yml
crud/: clubRepo.py  gameRepo.py  imageRepo.py  pavilionRepo.py
db/: create_database.py  database.py
models/: club.py  game.py  pavilion.py
repositories/: clubRepo.py  imageRepo.py  pavilionRepo.py
routers/: club.py  game.py  pavilion.py
schemas/: club.py  game.py  pavilion.py
tests/crud/: test_club_crud.py  test_crud.py  test_game_crud.py  test_imageRepo.py  test_pavilion_crud.py
tests/routers/: test_club.py  test_game.py  test_pavilion.py
